# lab-study

./: .gitignore  README.md  pyproject.toml
ch1/: avg.py  test.py
control/: Car.py  PID.py  pure_pursuit.py
control/pure_pursuit/: pure_pursuit.py
planning/AStar/: AStar.py
planning/Astar/: AStar.cpp  AStar.py
planning/Dubins/: dubins.py
planning/HybridAStar/: Car.py  HybridAStar.py  HybridAStarDubins.py  dubins.py  smoother.py
planning/RRT/: Car.py  compare_rrt_costs.py  compare_single_seed.py  cspace.py  dubins.py  rrt-star.py  rrt.py  rrt_dubins.py
planning/common/: GridMap2D.py  Node.py
planning/generic_driving_strategy_for_urban_env/: Car.py  IDM.py  Node.py  draw.py  driving_planning.py  main.py  sim.py  urban_env.json
planning/neural-rrt/: astar.py  clear_dataset.sh  compare_rrt_performance.py  compare_rrt_performance2.py  custom_map.py  dataset_generator.py  map_viewer.py  neural_rrt_star.py  neural_rrt_star2.py  predict.py  resnet.py  result_viewer.py  test.py  test_clearance_variation.py  test_step_size_variation.py  test_torch.py  train.py  train_recon2.py
planning/optimal_frenet_frame/: Car.py  IDM.py  config.py  figuare.py  figure.py  frenet.py  frenet_path.py  main.py  obstacles.py  planner.py  polynomial.py  sim.py  test.py
planning/pure_pursuit/: pure_pursuit.py
rl/: README.md
rl/ch1/: bandit.py  non_stationary.py
